// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`useDeliveryMomentOptions > returns delivery moment options with package type digital_stamp 1`] = `
[
  {
    "carrier": "postnl",
    "label": {
      "args": undefined,
      "key": "packageTypeDigitalStamp",
    },
    "price": 0,
    "value": {
      "carrier": "postnl",
      "date": null,
      "deliveryType": "standard",
      "packageType": "digital_stamp",
      "shipmentOptions": [],
      "time": null,
    },
  },
  {
    "carrier": "postnl:123",
    "label": {
      "args": undefined,
      "key": "packageTypeDigitalStamp",
    },
    "price": 4,
    "value": {
      "carrier": "postnl:123",
      "date": null,
      "deliveryType": "standard",
      "packageType": "digital_stamp",
      "shipmentOptions": [],
      "time": null,
    },
  },
]
`;

exports[`useDeliveryMomentOptions > returns delivery moment options with package type mailbox 1`] = `
[
  {
    "carrier": "postnl",
    "label": {
      "args": undefined,
      "key": "packageTypeMailbox",
    },
    "price": 0,
    "value": {
      "carrier": "postnl",
      "date": null,
      "deliveryType": "standard",
      "packageType": "mailbox",
      "shipmentOptions": [],
      "time": null,
    },
  },
  {
    "carrier": "postnl:123",
    "label": {
      "args": undefined,
      "key": "packageTypeMailbox",
    },
    "price": 5,
    "value": {
      "carrier": "postnl:123",
      "date": null,
      "deliveryType": "standard",
      "packageType": "mailbox",
      "shipmentOptions": [],
      "time": null,
    },
  },
]
`;

exports[`useDeliveryMomentOptions > returns delivery moment options with package type package 1`] = `
[
  {
    "carrier": "postnl",
    "label": {
      "args": {
        "deliveryType": {
          "args": undefined,
          "key": "deliveryStandardTitle",
        },
      },
      "key": "deliveryMomentNotPossible",
    },
    "price": 3,
    "value": {
      "carrier": "postnl",
      "deliveryType": "standard",
      "packageType": "package",
      "shipmentOptions": [
        {
          "name": "signature",
          "schema": {
            "default": false,
            "enum": [
              false,
              true,
            ],
            "type": "boolean",
          },
        },
        {
          "name": "only_recipient",
          "schema": {
            "default": false,
            "enum": [
              false,
              true,
            ],
            "type": "boolean",
          },
        },
      ],
      "time": {
        "args": {
          "deliveryType": {
            "key": "deliveryStandardTitle",
          },
        },
        "key": "deliveryMomentNotPossible",
      },
    },
  },
  {
    "carrier": "postnl:123",
    "label": {
      "args": {
        "deliveryType": {
          "args": undefined,
          "key": "deliveryStandardTitle",
        },
      },
      "key": "deliveryMomentNotPossible",
    },
    "price": 456,
    "value": {
      "carrier": "postnl:123",
      "deliveryType": "standard",
      "packageType": "package",
      "shipmentOptions": [
        {
          "name": "signature",
          "schema": {
            "default": false,
            "enum": [
              false,
              true,
            ],
            "type": "boolean",
          },
        },
        {
          "name": "only_recipient",
          "schema": {
            "default": false,
            "enum": [
              false,
              true,
            ],
            "type": "boolean",
          },
        },
      ],
      "time": {
        "args": {
          "deliveryType": {
            "key": "deliveryStandardTitle",
          },
        },
        "key": "deliveryMomentNotPossible",
      },
    },
  },
]
`;

exports[`useDeliveryMomentOptions > returns delivery moment options with package type package_small 1`] = `
[
  {
    "carrier": "postnl",
    "label": {
      "args": {
        "deliveryType": {
          "args": undefined,
          "key": "deliveryStandardTitle",
        },
      },
      "key": "deliveryMomentNotPossible",
    },
    "price": 6,
    "value": {
      "carrier": "postnl",
      "deliveryType": "standard",
      "packageType": "package_small",
      "shipmentOptions": [
        {
          "name": "signature",
          "schema": {
            "default": false,
            "enum": [
              false,
              true,
            ],
            "type": "boolean",
          },
        },
        {
          "name": "only_recipient",
          "schema": {
            "default": false,
            "enum": [
              false,
              true,
            ],
            "type": "boolean",
          },
        },
      ],
      "time": {
        "args": {
          "deliveryType": {
            "key": "deliveryStandardTitle",
          },
        },
        "key": "deliveryMomentNotPossible",
      },
    },
  },
  {
    "carrier": "postnl:123",
    "label": {
      "args": {
        "deliveryType": {
          "args": undefined,
          "key": "deliveryStandardTitle",
        },
      },
      "key": "deliveryMomentNotPossible",
    },
    "price": 0,
    "value": {
      "carrier": "postnl:123",
      "deliveryType": "standard",
      "packageType": "package_small",
      "shipmentOptions": [
        {
          "name": "signature",
          "schema": {
            "default": false,
            "enum": [
              false,
              true,
            ],
            "type": "boolean",
          },
        },
        {
          "name": "only_recipient",
          "schema": {
            "default": false,
            "enum": [
              false,
              true,
            ],
            "type": "boolean",
          },
        },
      ],
      "time": {
        "args": {
          "deliveryType": {
            "key": "deliveryStandardTitle",
          },
        },
        "key": "deliveryMomentNotPossible",
      },
    },
  },
]
`;
